fixed spacing issue caused by the animeTitle width creating extra space in the displaybar flex box

--- a/styles/MediaDisplay.module.css
+++ b/styles/MediaDisplay.module.css
@@ -1,3 +1,14 @@
+.displayBarContainer {
+	display: flex;
+	justify-content: center;
+	margin-left: 1rem;
+	margin-right: 1rem;
+}
+
+.displayBarInfoContainer {
+   display: flex;
+}
+
 .title {
 	color: #4f4f4f;
 }
@@ -14,17 +25,6 @@
    color: #418D89;
 }
 
-.displayBarInfoContainer {
-   display: flex;
-}
-
-.displayBarContainer {
-	display: flex;
-	justify-content: center;
-	margin-left: 1rem;
-	margin-right: 1rem;
-}
-
 .animeBarContainer {
 	display: flex;
 }
@@ -37,8 +37,14 @@
 	color: #418D89;
 }
 
-.animeCardTitle {
+.animeTitleContainer {
+	display: flex;
+	justify-content: center;
+	margin-left: 1rem;
+	margin-right: 1rem;
+}
+
+.animeTitle {
 	color: #4f4f4f;
 	transition: 300ms;
-	width: 150px;
 }
